Improve top-best-sets container - Fix problem with images, they are not cropped now - Make text description to fill all the space, skip redundant space from right side - Remove redundant classes

--- a/src/scss/pages/_catalog.scss
+++ b/src/scss/pages/_catalog.scss
@@ -386,13 +386,13 @@
 
 .top-set-image {
   height: 87px;
-  width: auto;
+  width: 87px;
   overflow: hidden;
 
   .top-set-photo {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 }
   .top-set-info {
@@ -400,6 +400,7 @@
     flex-direction: column;
     gap: 8px;
     justify-content: space-between;
+    flex: 1;
   }
 
   .top-set-desc {
